--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Iceland&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Oxanium:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
+
+
 /* *{
 border: solid red 1px;
 box-sizing: border-box;
 } */
 
 body, html{
-background-color: rgb(20, 20, 20);
+/* background-color: rgb(20, 20, 20); */
+font-family: 'Oxanium', cursive;
 }
 
 html{
@@ -14,13 +18,13 @@ display: flex;
 justify-content: center;
 padding-top: 3vh;
 padding-bottom: 3vh;
-height: 100vh;
+height: 90vh;
 }
 
 body{
 width: 61.8vw;
 /* height: 100%; */
-background-color: rgb(47, 47, 47);
+background-color: rgb(26, 26, 26);
 display: flex;
 flex-direction: column;
 justify-content: flex-start;
@@ -28,24 +32,24 @@ align-items: center;
 }
 
 ul{
-   /* display: grid; */
 columns: 2;
 color: rgb(100, 195, 105);
 font-size: large;
+white-space: nowrap;
 }
 
 .main-div{
     background-color: rgb(135, 168, 154);
     display: flex;
     flex-direction: row;
-    height: 42vh;
+    height: 61.8vh;
     width: 50vw;
    
 }
 
 .left-div{
-    background-color: rgb(26, 26, 26);
-    flex-grow: 1;
+    background-color: rgb(47, 47, 47);
+    flex-grow: 3;
     border: solid 2px;
     overflow: auto;
     flex-basis: 0;
@@ -66,4 +70,46 @@ h1{
     font-size: 60px;
     color: rgb(100, 195, 105);
     flex-basis: 0;
+}
+
+button{
+    margin: 2vh;
+    width: 35%;
+    height: 15%;
+    border-radius: 0;
+    background-color: rgb(47, 47, 47);
+    color: rgb(100, 195, 105);
+    font-family: 'Oxanium', cursive;
+    
+}
+
+hr{
+    border: solid black 1px;
+    width: 100%;
+}
+
+.inputs{
+    display: flex;
+    flex-basis: 0;
+    flex-direction: column;
+}
+
+input{
+    color: red;
+    font-family: 'Oxanium', cursive;
+}
+
+li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+
+li>button{
+    width: fit-content;
+    border-radius: 0;
+    background-color: rgb(47, 47, 47);
+    color: rgb(100, 195, 105);
+    font-family: 'Oxanium', cursive;
 }
