--- a/style.css
+++ b/style.css
@@ -32,10 +32,16 @@ align-items: center;
 }
 
 ul{
-columns: 2;
+    margin: 0px;
+    height: fit-content;
+    /* width: 95%; */
+columns: 4;
 color: rgb(100, 195, 105);
-font-size: large;
-white-space: nowrap;
+font-size: 1.7vh;
+padding: 0;
+display: block;
+gap: 10px;
+padding: 10px;
 }
 
 .main-div{
@@ -48,7 +54,7 @@ white-space: nowrap;
 }
 
 .left-div{
-    background-color: rgb(47, 47, 47);
+    background-color: rgb(62, 62, 62);
     flex-grow: 3;
     border: solid 2px;
     overflow: auto;
@@ -66,10 +72,12 @@ white-space: nowrap;
 }
 
 h1{
+    min-height: 50px;
     font-family: 'Audiowide', cursive;
     font-size: 60px;
     color: rgb(100, 195, 105);
-    flex-basis: 0;
+    text-shadow: 0px 0px 5px;
+    /* flex-basis: 0; */
 }
 
 button{
@@ -100,10 +108,21 @@ input{
 }
 
 li{
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     align-items: center;
+    text-align: center;
     padding: 10px;
+    white-space: nowrap;
+    list-style: none;
+    background-color: rgb(47, 47, 47);
+    border-top: solid 1px rgb(96, 163, 101);
+    border-left: solid 1px rgb(96, 163, 101);
+    border-right: solid 1px rgb(56, 69, 57);
+    border-bottom: solid 1px rgb(56, 69, 57);
+    text-shadow: 0px 0px 2px;
+    box-sizing: border-box;
+ 
 }
 
 li>button{
