--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ ul{
     margin: 0px;
     height: fit-content;
     /* width: 95%; */
-columns: 4;
+columns: 4 auto;
 color: rgb(100, 195, 105);
 font-size: 1.7vh;
 padding: 0;
@@ -113,7 +113,6 @@ li{
     align-items: center;
     text-align: center;
     padding: 10px;
-    white-space: nowrap;
     list-style: none;
     background-color: rgb(47, 47, 47);
     border-top: solid 1px rgb(96, 163, 101);
@@ -122,13 +121,14 @@ li{
     border-bottom: solid 1px rgb(56, 69, 57);
     text-shadow: 0px 0px 2px;
     box-sizing: border-box;
- 
+    white-space: nowrap;
+    display: block;
 }
 
 li>button{
     width: fit-content;
     border-radius: 0;
-    background-color: rgb(47, 47, 47);
+    background-color: rgb(59, 59, 59);
     color: rgb(100, 195, 105);
     font-family: 'Oxanium', cursive;
 }
