--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ grid-template-rows: 20% 20% 20% 20%;
 }
 
 .left-div{
+    padding-top: 0.5vh;
     background-color: rgb(62, 62, 62);
     flex-grow: 3;
     border: solid 2px black;
@@ -77,6 +78,10 @@ grid-template-rows: 20% 20% 20% 20%;
     border-bottom-left-radius: 0px;
 }
 
+h3{
+    margin-left: 0.5vh;
+}
+
 h1{
     min-height: 50px;
     font-family: 'Audiowide', cursive;
@@ -94,7 +99,9 @@ button{
     background-color: rgb(47, 47, 47);
     color: rgb(100, 195, 105);
     font-family: 'Oxanium', cursive;
+    font-size: 0.65vw;
     border-radius: 5px;
+    text-shadow: 0px 0px 2px;
 }
 
 hr{
@@ -111,16 +118,12 @@ hr{
 input{
     /* color: red; */
     font-family: 'Oxanium', cursive;
-    margin: 20px 0px;
+    margin: 0.8vw 0px;
 }
 
 li{
-    /* display: flex;
-    flex-direction: column; */
-    align-items: center;
     text-align: center;
-    padding: 10px;
-    padding-bottom: 5px;
+    padding: 0.7vw 0px;
     list-style: none;
     background-color: rgb(47, 47, 47);
     border-top: solid 1px rgb(96, 163, 101);
@@ -130,10 +133,47 @@ li{
     text-shadow: 0px 0px 2px;
     box-sizing: border-box;
     white-space: nowrap;
-    margin: 3px 3px;
+    overflow: hidden;
+    margin: 0.5vw;
     margin-block-start: 0px;
     border-radius: 5px;
+    font-size: 0.8vw;
+    animation-name: none;
+animation-duration: 3s;
+animation-iteration-count: infinite;
 }
+
+@keyframes colorRotate {
+    from {
+        color:#f40a0a;
+        text-shadow: 0px 0px 5px #fafafa;
+    }
+    16.6% {
+        color: rgb(232, 163, 13);
+        text-shadow: 0px 0px 5px rgb(100, 195, 105);
+    }
+    33.3% {
+        color: #d3eb19;
+        text-shadow: 0px 0px 5px #fafafa;
+    }
+    50% {
+        color: rgb(15, 228, 79);
+        text-shadow: 0px 0px 5px rgb(100, 195, 105);
+    }
+    66.6% {
+        color: #1099e8;
+        text-shadow: 0px 0px 5px #fafafa;
+    }
+    83.3% {
+        color: rgb(103, 22, 233);
+        text-shadow: 0px 0px 5px rgb(100, 195, 105);
+    }
+    to {
+        color: #ef0fa5;
+        text-shadow: 0px 0px 5px #fafafa;
+    }
+}
+  
 
 li>button{
     width: fit-content;
@@ -142,5 +182,5 @@ li>button{
     background-color: rgb(59, 59, 59);
     color: rgb(100, 195, 105);
     font-family: 'Oxanium', cursive;
-    border-radius: 5px;
+    border-radius: 4px;
 }
