--- a/style.css
+++ b/style.css
@@ -139,37 +139,38 @@ li{
     border-radius: 5px;
     font-size: 0.8vw;
     animation-name: none;
-animation-duration: 3s;
+animation-duration: 1s;
 animation-iteration-count: infinite;
+animation-timing-function: linear;
 }
 
 @keyframes colorRotate {
     from {
-        color:#f40a0a;
+        /* color:#f40a0a; */
         text-shadow: 0px 0px 5px #f40a0a;
     }
     16.6% {
-        color: rgb(232, 163, 13);
+        /* color: rgb(232, 163, 13); */
         text-shadow: 0px 0px 5px rgb(232, 163, 13);
     }
     33.3% {
-        color: #d3eb19;
+        /* color: #d3eb19; */
         text-shadow: 0px 0px 5px #d3eb19;
     }
     50% {
-        color: rgb(15, 228, 79);
+        /* color: rgb(15, 228, 79); */
         text-shadow: 0px 0px 5px rgb(15, 228, 79);
     }
     66.6% {
-        color: #1099e8;
+        /* color: #1099e8; */
         text-shadow: 0px 0px 5px #1099e8;
     }
     83.3% {
-        color: rgb(103, 22, 233);
+        /* color: rgb(103, 22, 233); */
         text-shadow: 0px 0px 5px rgb(103, 22, 233);
     }
     to {
-        color: #ef0fa5;
+        /* color: #ef0fa5; */
         text-shadow: 0px 0px 5px #ef0fa5;
     }
 }
