--- a/new-style.css
+++ b/new-style.css
@@ -1,8 +1,8 @@
 @media screen and (max-width: 992px) {
 
-    * {
+    /* * {
         border: solid red 1px;
-    }
+    } */
 
     html {
         display: flex;
