--- a/new-style.css
+++ b/new-style.css
@@ -57,7 +57,7 @@
         padding-top: 3vh;
         list-style: none;
         font-size: 5vw;
-   height: 15vh;
+   height: 20vw;
    flex-grow: 1;
    min-height: 10vh;
     }
@@ -81,7 +81,7 @@
         background-color: rgb(47, 47, 47);
         color: rgb(100, 195, 105);
         font-family: 'Oxanium', cursive;
-        font-size: 4vw;
+        font-size: 2vh;
         border-radius: 5px;
         text-shadow: 0px 0px 2px;
     }
