--- a/style.css
+++ b/style.css
@@ -118,13 +118,12 @@ hr{
 input{
     /* color: red; */
     font-family: 'Oxanium', cursive;
-    margin: 0.8vw 0px;
+    margin: 0.5vh 0px;
 }
 
 li{
     text-align: center;
-    padding: 0.7vw 0px;
-    list-style: none;
+    padding: 0.7vw 0.5vw 0vw 0.5vw;
     background-color: rgb(47, 47, 47);
     border-top: solid 1px rgb(96, 163, 101);
     border-left: solid 1px rgb(96, 163, 101);
