--- a/new-style.css
+++ b/new-style.css
@@ -9,14 +9,14 @@
         justify-content: center;
       margin: 0px;
       padding: 0px;
-      height: 100vh;
+      height: 100%;
     }
 
     body {
         margin: 0px;
         padding: 0px;
         width: auto;
-        /* height: 100%; */
+        height: 100%;
         background-color: rgb(26, 26, 26);
         display: flex;
         flex-direction: column;
@@ -25,7 +25,7 @@
     }
 
     h1{
-        height: fit-content;
+        height: 3vh;
         font-size: 5vh;
         padding: 20px;
         padding-bottom: 70px;
@@ -37,34 +37,47 @@
         background-color: rgb(135, 168, 154);
         display: flex;
         flex-direction: row;
-        height: 73vh;
+        height: 100%;
         width: 100vw;
         border-radius: 5px;
     }
 
     ul{
         margin: 0px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    /* flex-direction: column; */
+    grid-template-columns: 1fr 1fr;
+    
     }
 
     .left-div{
-        flex-grow: 1.5; 
+        flex-grow: 2; 
         /* overflow: scroll; */
+        padding: 0px;
     }
 
+    .right-div{
+flex-grow: 1;
+    }
+    
+
     li{
-        padding-top: 3vh;
+        padding-top: 1vh;
         list-style: none;
-        font-size: 4.5vw;
+        font-size: 3vw;
    height: 20vw;
    flex-grow: 1;
    min-height: 10vh;
+   white-space: normal;
     }
 
 
     input{
-        margin: 5px 5;
+        margin: 5px 5px;
+    }
+
+    span{
+        margin: 5px 5px;
     }
 
     li>button{
@@ -76,7 +89,7 @@
         font-family: 'Oxanium', cursive;
         border-radius: 4px;
         font-size: 1.5vw;
-        margin-top: 0px;
+        margin-top: 5px;
     }
 
     button{
