--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ h1{
 
 button{
     margin: 2vh;
-    width: 35%;
+    width: 10vh;
     height: 15%;
     border-radius: 0;
     background-color: rgb(47, 47, 47);
