--- a/new-style.css
+++ b/new-style.css
@@ -9,7 +9,7 @@
         justify-content: center;
       margin: 0px;
       padding: 0px;
-      height: 100%;
+      height: 90%;
     }
 
     body {
@@ -25,19 +25,20 @@
     }
 
     h1{
-        height: 3vh;
+        height: 2vh;
         font-size: 5vh;
         padding: 20px;
         padding-bottom: 70px;
         text-align: center;
         margin-bottom: 30px;
+        flex-basis: 0;
     }
 
     .main-div{
         background-color: rgb(135, 168, 154);
         display: flex;
         flex-direction: row;
-        height: 100%;
+        height: 78vh;
         width: 100vw;
         border-radius: 5px;
     }
@@ -52,12 +53,14 @@
 
     .left-div{
         flex-grow: 2; 
-        /* overflow: scroll; */
+        overflow: scroll;
         padding: 0px;
     }
 
     .right-div{
 flex-grow: 1;
+text-align: center;
+padding: 0px;
     }
     
 
@@ -69,6 +72,7 @@ flex-grow: 1;
    flex-grow: 1;
    min-height: 10vh;
    white-space: normal;
+   margin: 8px 3px;
     }
 
 
