--- a/new-style.css
+++ b/new-style.css
@@ -39,8 +39,11 @@
         display: flex;
         flex-direction: row;
         height: 78vh;
+        min-height: 78vh;
+        max-height: 78vh;
         width: 100vw;
         border-radius: 5px;
+        flex-basis: 0;
     }
 
     ul{
@@ -48,6 +51,7 @@
     display: grid;
     /* flex-direction: column; */
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     
     }
 
