--- a/new-style.css
+++ b/new-style.css
@@ -25,12 +25,13 @@
     }
 
     h1{
-        height: 2vh;
+        max-height: 2vh;
+        margin: 0;
         font-size: 5vh;
         padding: 20px;
         padding-bottom: 70px;
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
         flex-basis: 0;
     }
 
@@ -49,7 +50,6 @@
     ul{
         margin: 0px;
     display: grid;
-    /* flex-direction: column; */
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     
@@ -77,6 +77,10 @@ padding: 0px;
    min-height: 10vh;
    white-space: normal;
    margin: 8px 3px;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   align-items: center;
     }
 
 
@@ -89,6 +93,7 @@ padding: 0px;
     }
 
     li>button{
+        position: relative;
         width: fit-content;
         height: 2vh;
         border-radius: 0;
@@ -98,6 +103,7 @@ padding: 0px;
         border-radius: 4px;
         font-size: 1.5vw;
         margin-top: 5px;
+        margin-bottom: 10px;
     }
 
     button{
