--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ padding: 10px;
 /* gap: 10px; */
 display: grid;
 grid-template-columns: 25% 25% 25% 25%;
-grid-template-rows: 20% 20% 20% 20%;
+grid-template-rows: 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20%;
 }
 
 .main-div{
