--- a/new-style.css
+++ b/new-style.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
 
     /* * {
         border: solid red 1px;
@@ -95,7 +95,7 @@ padding: 0px;
     li>button{
         position: relative;
         width: fit-content;
-        height: 2vh;
+        height: fit-content;
         border-radius: 0;
         background-color: rgb(59, 59, 59);
         color: rgb(100, 195, 105);
@@ -103,7 +103,7 @@ padding: 0px;
         border-radius: 4px;
         font-size: 1.5vw;
         margin-top: 5px;
-        margin-bottom: 10px;
+        margin-bottom: 2vw;
     }
 
     button{
