--- a/new-style.css
+++ b/new-style.css
@@ -52,7 +52,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    
+    padding-bottom: 1vw;
     }
 
     .left-div{
